<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/data_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/material_dynamic_neutral60"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/result_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linecolor"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        android:layout_marginBottom="6dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/operatorbutton"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:onClick="onAllclearClick"
                android:text="@string/c"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/operatorbutton"
                android:onClick="onBackClick"
                app:icon="@drawable/baseline_backspace_24"
                app:iconSize="30dp"
                app:iconTint="@color/btnBackground2"
                tools:ignore="SpeakableTextPresentCheck" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_modulo"
                style="@style/operatorbutton"
                android:onClick="onOperatorClick"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:text="@string/percent"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divide"
                style="@style/operatorbutton"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:onClick="onOperatorClick"
                android:text="@string/divide"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_7"
                android:onClick="onDigitClick"
                android:text="@string/_7"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_8"
                android:onClick="onDigitClick"
                android:text="@string/_8"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_9"
                android:onClick="onDigitClick"
                android:text="@string/_9"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/operatorbutton"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:backgroundTint="@color/btnBackground2"
                android:onClick="onOperatorClick"
                android:text="@string/_multiplier"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_4"
                android:onClick="onDigitClick"
                android:text="@string/_4"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_5"
                android:onClick="onDigitClick"
                android:text="@string/_5"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_6"
                android:onClick="onDigitClick"
                android:text="@string/_6"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                style="@style/operatorbutton"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:onClick="onOperatorClick"
                android:text="@string/addition"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_1"
                android:onClick="onDigitClick"
                android:text="@string/_1"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_2"
                android:onClick="onDigitClick"
                android:text="@string/_2"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_3"
                android:onClick="onDigitClick"
                android:text="@string/_3"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtract"
                style="@style/operatorbutton"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:onClick="onOperatorClick"
                android:text="@string/minus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_allclear"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:textSize="22sp"
                android:text="@string/_00"/>
            <com.google.android.material.button.MaterialButton
                style="@style/digitbutton"
                android:id="@+id/btn_0"
                android:onClick="onDigitClick"
                android:text="@string/_0"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/digitbutton"
                android:onClick="onDigitClick"
                android:text="@string/dot"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/operatorbutton"
                android:textColor="@color/white"
                android:backgroundTint="@color/btnBackground2"
                android:onClick="onEqualClick"
                android:text="@string/equals"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
